--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple dungeon bot used to see which of your team members are online.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "config": "node ./scripts/config.js"
   },
   "repository": {
     "type": "git",
